# transparency-policy

./: .gitignore  .gitreview  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini  transparency-policy.htm  transparency-policy.rst
doc/source/: conf.py  index.rst
