[metadata]
name = openstack-transparency-policy
summary = OpenStack Foundation Transparency Policy
description-file =
    README.rst
author = OpenStack Foundation Transparency Committee
author-email = transparency@lists.openstack.org
home-page = https://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
